--- a/style.css
+++ b/style.css
@@ -43,15 +43,16 @@ body{
     cursor: pointer;
 }
 #button-to-fullscreen, #button-fullscreen-exit{
-    transition: 500ms;
+    transition: 100ms ease-out;
     position: absolute;
     left: 25px;
     top: 35px;
     cursor: pointer;
-    color: #333;
+    color: #666;
 }
 #button-to-fullscreen:hover, #button-fullscreen-exit:hover{
     color: #fff;
+    filter: drop-shadow(0px 0px 1px white) drop-shadow(0px 0px 8px white);
 }
 #button-fullscreen-exit, #title_en, #description_en{
     display: none;
@@ -69,7 +70,7 @@ h3{
 }
 a{
     transition: 500ms;
-    color: #333;
+    color: #666;
     text-decoration: none;
 }
 a:hover{
@@ -86,15 +87,16 @@ a:visited:hover{
     right: 25px;
     top: 35px;
     
-    color: #333;
+    color: #666;
 }
 #lang-name, #rus{
     padding-right: 7px;
 }
 #rus, #eng{
-    transition: 500ms;
+    transition: 100ms ease-out;
 }
 #rus:hover, #eng:hover{
     cursor: pointer;
     color: #fff;
+    text-shadow: 0px 0px 4px #fff4, 0px 0px 10px #fff5, 0px 0px 20px #fff4, 0px 0px 100px #fff4;
 }
